# sourse_sourse_engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  appveyor.yml  clang-format.sh
datacache/: datacache.hpp
dedicated/: CMakeLists.txt  Dedicated.cpp  DedicatedExports.cpp  DedicatedExports.hpp
dedicated_main/: CMakeLists.txt  main.cpp
engine/: CMakeLists.txt  CvarQuery.cpp  DebugOverlay.cpp  DebugOverlay.hpp  DedicatedServerAPI.cpp  Efx.cpp  Engine.cpp  Engine.hpp  EngineAPI.cpp  EngineServer.cpp  EngineServer.hpp  EngineSoundClient.cpp  GameEventManager2.cpp  GameEventManager2.hpp  IEngine.hpp  ModelInfoServer.cpp  ModelInfoServer.hpp  RenderView.cpp  ServerPluginHelpers.cpp  ServerPluginHelpers.hpp  ShadowMgr.cpp  SpatialPartition.cpp  StaticPropMgrClient.cpp  VoiceServer.hpp
engine/unused/: EngineTraceClient.cpp  NetworkStringTableContainerClient.cpp
engine/win/: sys_wind.cpp
filesystem/: CMakeLists.txt  filesystem.cpp
game/server/: ServerGameClients.hpp  ServerGameEnts.hpp
gameui/: CMakeLists.txt
inputsystem/: CMakeLists.txt  inputsystem.hpp
launcher/: CMakeLists.txt
launcher_main/: CMakeLists.txt  main.cpp
materialsystem/: MaterialSystemStub.cpp  MaterialSystemStub.hpp
networksystem/: CMakeLists.txt
public/: SharedLibHelper.hpp  engine_launcher_api.h
soundsystem/: CMakeLists.txt  audiosource.cpp  audiosource.hpp  soundmixer.hpp  soundsystem.cpp
src/: CMakeLists.txt
src/common/GameUI/: IGameConsole.h
src/datacache/: CMakeLists.txt  DataCache.cpp  datacache.cpp
src/dedicated/: CMakeLists.txt  Dedicated.cpp  DedicatedExports.cpp
src/dedicated_main/: CMakeLists.txt  dedicated_main.vpc
src/dedicated_main/win/: dedicated_main.rc  resource.h
src/engine/: BaseClient.hpp  BaseClientState.hpp  BaseServer.hpp  CMakeLists.txt  ClientState.hpp  CvarQuery.hpp  DedicatedServerAPI.cpp  DedicatedServerAPI.hpp  Efx.hpp  Engine.cpp  EngineAPI.cpp  EngineAPI.hpp  EngineClient.cpp  EngineClient.hpp  EngineServer.cpp  EngineSoundClient.cpp  EngineSoundClient.hpp  EngineSoundServer.cpp  EngineSoundServer.hpp  EngineTraceClient.hpp  EngineTraceServer.hpp  GameClient.hpp  GameEventManager2.cpp  GameServer.hpp  GameUIFuncs.cpp  GameUIFuncs.hpp  IEngine.hpp  IGame.hpp  ModelInfoClient.cpp  ModelInfoClient.hpp  ModelInfoServer.cpp  ModelInfoServer.hpp  ModelRender.cpp  ModelRender.hpp  NetworkStringTableContainerClient.cpp  NetworkStringTableContainerClient.hpp  NetworkStringTableContainerServer.cpp  NetworkStringTableContainerServer.hpp  RenderView.hpp  ServerPluginManager.cpp  (+55 more)
src/engine/linux/: sys_linux.cpp
src/engine/null/: sys_null.cpp
src/engine/unused/: EngineSoundServer.cpp  EngineTraceServer.cpp  ModelRender.cpp  RenderView.cpp
src/engine/win/: in_win.cpp  sys_win.cpp
src/filesystem/: BaseFileSystem.cpp  BaseFileSystem.hpp  CMakeLists.txt  FileSystem.hpp  QueuedLoader.cpp  QueuedLoader.hpp
src/game/: CMakeLists.txt
src/game/client/: CMakeLists.txt
src/game/server/: CMakeLists.txt  ServerGameClients.cpp  ServerGameEnts.cpp
src/gameui/: CMakeLists.txt  GameConsole.cpp  GameConsole.hpp  GameUI.cpp  GameUI.hpp
src/inputsystem/: CMakeLists.txt  IInputImpl.hpp  InputSystem.cpp  InputSystem.hpp  inputsystem.cpp
src/inputsystem/win/: InputImplDInput.cpp  InputImplDInput.hpp
src/launcher/: CMakeLists.txt  Launcher.cpp
src/launcher_main/: CMakeLists.txt  launcher_main.vpc  main.cpp
src/launcher_main/win/: launcher_main.rc  resource.h
src/materialsystem/: CMakeLists.txt  MaterialSystemStub.cpp
src/networksystem/: CMakeLists.txt  NetworkClient.hpp  NetworkServer.hpp  NetworkSystem.hpp  netchannel.hpp
src/public/: SharedLibHelper.hpp  engine_launcher_api.h
src/public/mathlib/: mathlib.h
src/public/tier0/: platform.h
src/scenefilecache/: CMakeLists.txt  SceneFileCache.cpp  SceneFileCache.hpp
src/soundemittersystem/: CMakeLists.txt  SoundEmitterSystemBase.cpp  SoundEmitterSystemBase.hpp
src/soundsystem/: AudioDeviceWave.cpp  audiodevice.hpp  soundmixer.cpp  soundmixer.hpp  soundsystem.cpp  soundsystem.hpp
src/soundsystem/unused/: snd_dma.cpp
src/studiorender/: CMakeLists.txt  StudioRender.cpp  StudioRender.hpp
src/tier0/: CMakeLists.txt  commandline.cpp  dbg.cpp  memalloc.cpp  pch_tier0.cpp  platform.cpp  threadtools.cpp
src/tier0/unused/: tier0.vpc
src/vphysics-local/: CMakeLists.txt
src/vstdlib/: CMakeLists.txt  Cvar.cpp  Cvar.hpp  KeyValuesSystem.cpp  coroutine.cpp  cvar.cpp  jobthread.cpp  osversion.cpp  random.cpp  vcover.cpp
src/vstdlib/unused/: vstdlib.vpc
src/vstdlib/win/: processutils.cpp
tier0/: CMakeLists.txt
tier1/: CMakeLists.txt
vphysics-local/: CMakeLists.txt
vstdlib/: CMakeLists.txt  Cvar.hpp
